Added emojis for weather conditions Added Twilio Verification code

--- a/templates/send-message.html
+++ b/templates/send-message.html
@@ -16,7 +16,7 @@
           <h1>The Another way to say love you!</h1>
           {% endif %}
           <span class="subheading">Enter your loved one's phone number below to send message.
-          Inform it about current weather condition!.</span>
+          Inform it about current weather condition!</span>
         </div>
       </div>
     </div>
